--- a/ex2/index.html
+++ b/ex2/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>GitHub</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <div class="header">
         <div class="container">
-            <div class="container-left">
+            <div class="container-left clearfix">
                 <div class="logo">
                     <img src="https://heropcode.github.io/GitHub-Responsive/img/logo.svg" alt="GitHub Logo">
                 </div>
